Creating unique keys / tranforming put to patch operation on balance API
