# api/controllers/balance/validator.go
@@ -4,12 +4,12 @@ import (
 	"marcelofelixsalgado/financial-period-api/api/responses"
 	"marcelofelixsalgado/financial-period-api/api/responses/faults"
 	"marcelofelixsalgado/financial-period-api/pkg/usecase/balance/create"
-	"marcelofelixsalgado/financial-period-api/pkg/usecase/balance/update"
 )
 
 type InputBalanceDto struct {
-	periodId   string
-	categoryId string
+	periodId    string
+	categoryId  string
+	limitAmount float32
 }
 
 func ValidateCreateRequestBody(inputCreateBalanceDto create.InputCreateBalanceDto) *responses.ResponseMessage {
@@ -17,23 +17,6 @@ func ValidateCreateRequestBody(inputCreateBalanceDto create.InputCreateBalanceDt
 		periodId:   inputCreateBalanceDto.PeriodId,
 		categoryId: inputCreateBalanceDto.CategoryId,
 	}
-	return validateRequestBody(inputBalanceDto)
-}
-
-func ValidateUpdateRequestBody(inputUpdateBalanceDto update.InputUpdateBalanceDto) *responses.ResponseMessage {
-
-	if inputUpdateBalanceDto.Id == "" {
-		return responses.NewResponseMessage().AddMessageByIssue(faults.MissingRequiredField, responses.PathParameter, "id", "")
-	}
-
-	inputBalanceDto := InputBalanceDto{
-		periodId:   inputUpdateBalanceDto.PeriodId,
-		categoryId: inputUpdateBalanceDto.CategoryId,
-	}
-	return validateRequestBody(inputBalanceDto)
-}
-
-func validateRequestBody(inputBalanceDto InputBalanceDto) *responses.ResponseMessage {
 
 	responseMessage := responses.NewResponseMessage()
 
