# pkg/usecase/balance/create/dto.go
@@ -7,12 +7,11 @@ type InputCreateBalanceDto struct {
 	PeriodId     string  `json:"period_id"`
 	CategoryId   string  `json:"category_id"`
 	ActualAmount float32 `json:"actual_amount"`
-	LimitAmount  float32 `json:"limit_amout"`
+	LimitAmount  float32 `json:"limit_amount"`
 }
 
 type OutputCreateBalanceDto struct {
 	Id           string    `json:"id"`
-	TenantId     string    `json:"tenant_id"`
 	PeriodId     string    `json:"period_id"`
 	CategoryId   string    `json:"category_id"`
 	ActualAmount float32   `json:"actual_amount"`
